Postgres Dao tested working